# source-locations

./: .ghci  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  README.md  default.nix  flake.nix  hie.yaml  release.nix  shell.nix  source-locations.cabal
nix/: pkgs.nix
nix/extensions/: prim-bool.nix  prim-char.nix  prim-compat.nix  prim-int.nix  prim-ord.nix  source-locations.nix
nix/exts/: tasty-hedgehog.nix
nix/haskell-packages/: prim-bool.nix  prim-char.nix  prim-compat.nix  prim-int.nix  prim-ord.nix
nix/overlays/: haskell.nix
nix/pkgs/: prim-bool.nix  prim-char.nix  prim-int.nix  prim-ord.nix
src/Data/: SrcLoc.hs  SrcSpan.hs
src/Data/SrcLoc/: Core.hs  Lens.hs  Prim.hs
src/Data/SrcSpan/: Core.hs
test/: Test.hs
test/Test/: Core.hs  SrcLoc.hs
test/Test/SrcLoc/: Gen.hs  Ord.hs
